# dumbo-runlim-ucorexplain

./: pyproject.toml
dumbo-runlim-ucorexplain/: __main__.py
dumbo_runlim_ucorexplain/: __main__.py
dumbo_runlim_ucorexplain/data/: sudoku-4x4.ucorexplain.asp  sudoku-4x4.xasp.asp  sudoku-9x9.ucorexplain.asp  sudoku-9x9.xasp.asp
ucorexplain/: __main__.py
