[tool.poetry]
name = "dumbo-runlim-ucorexplain"
version = "0.1.0"
description = ""
authors = ["malvi <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xasp = "^0.8.3"
dumbo-asp = "^0.3.6"
dumbo-runlim = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
